--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
     "start": "node server.js"
   },
   "author": "Moaaz Elsayed",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "unirest": "^0.5.1"
+  }
 }
