--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "firebase": "^3.6.1",
     "unirest": "^0.5.1"
   }
 }
